# aoai-ner

./: .gitignore  README-azd.md  README.md  azure.yaml  deploy-resources.ps1  deploy-resources.sh
.github/: dependabot.yml
app/annotation/: Dockerfile.sample  README.md  pyproject.toml
app/annotation/annotation/: main.py
app/annotation/annotation/application/factory/: create_annotations_enrich_factory.py  create_annotations_factory.py
app/annotation/annotation/application/usecase/: create_annotations_enrich_usecase.py  create_annotations_usecase.py
app/annotation/annotation/infrastructure/datasource/config/: azure_openai_repository.py
app/annotation/annotation/model/: inquiry_request.py
app/createindex/: Dockerfile.sample  README.md  pyproject.toml
app/createindex/createindex/: main.py
app/createindex/requests/: create_vector_index_with_semantic.json
app/fn/: README.md  function_app.py  local.settings.sample.json  requirements.txt
app/python/: function_app.py  local.settings.sample.json  request.http  request.json  requirements.txt
app/search/: Dockerfile.sample  README.md  pyproject.toml
app/search/aisearch/: main.py
infra/: README.md  main.bicep  main.bicepparam  main.parameters.json  maincopy.bicepparam
infra/core/aoai/: azure-openai.bicep
infra/core/cognitive/: aisearch.bicep  azure-openai.bicep
infra/core/host/: containerapp.bicep  function.bicep
infra/core/monitor/: monitoring.bicep
infra/core/storage/: storage-account.bicep
infra/shared/monitor/: log-analytics.bicep  monitoring.bicep
python/: .gitignore  README.md  function_app.py
(+15 files in other folders)
