[tool.poetry]
name = "aisearch"
version = "0.1.0"
description = ""
authors = ["kohei3110 <kk.31108424@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
openai = "^1.58.1"
tiktoken = "^0.7.0"
langchain = "^0.2.6"
pandas = "^2.2.2"
azure-search-documents = "^11.4.0"
azure-storage-blob = "^12.20.0"
azure-identity = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
